alinear texto de reservas

--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -82,12 +82,14 @@
                     · +51 987-789-987<br>
                     · +51 955-999-988<br>
                 </p>
-                <a class="link text-center" href="contacto" >PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                <div class="text-center">
+                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                </div>
             </section>
         </section>
         <section class="row elements">
             <img src="/src/img/webp/bg.schedule.room.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img" alt="picnic-jardin">
-            <section class="content col-12 col-md-6 order-sm-2 order-md-1">
+            <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Reservas para eventos privados
                 </h3>
@@ -97,7 +99,9 @@
                     * Previa reserva con 24 horas de anticipación.<br>
                     * Para grupos de mínimo 2 y máximo 14 personas<br>
                 </p>
-                <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                <div class="text-center">
+                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                </div>
             </section>
         </section>
         <section class="row elements">
@@ -110,13 +114,14 @@
                     Calle Enrique Palacios 1072<br>
                     Miraflores. Lima, Peru
                 </p>
-                
-                <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                <div class="text-center">
+                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                </div>
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.socialNetworks.jpg" class="col-12 col-md-6 order-sm-1 order-md-2" alt="cabalgata">
-            <section class="content col-12 col-md-6 order-sm-2 order-md-1">
+            <img src="/src/img/webp/bg.socialNetworks.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img" alt="cabalgata">
+            <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Síguenos en nuestras redes sociales:
                 </h3>
@@ -124,7 +129,9 @@
                     En nuestras redes sociales aparecemos como PiedraLunaResort.<br>
                     Etiquétanos con el hashtag #PiedraLunaresortEsChevere y entrarás en increíbles sorteos.
                 </p>
-                <a href="contacto" class="link text-center">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                <div class="text-center">
+                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                </div>
             </section>
             
         </section>
