uso de enlances con boostrap

--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -77,7 +77,7 @@
                     Lleve a sus hijos a acariciar nuestras adorables alpacas bebé y ayude a darles el biberón. Esta es una gran oportunidad para acercarse a una de las criaturas más icónicas y adorables de la región. Todos los días a las 8 am y a las 4 pm. Sujeto a condiciones climáticas.
                 </p>
                 <div class="text-center">
-                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                    <a href="#" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE EN CONTACTO CON NOSOTROS</a>
                 </div>
             </section>
         </section>
@@ -91,7 +91,7 @@
                     Disfrute de un almuerzo especial junto al Río Urubamba. Comience con unos sabrosos bocadillos, luego continúe con una variedad de platos con ingredientes locales, incluyendo de nuestro propio huerto. Previa reserva con 24 horas de anticipación. Para grupos de mínimo 2 y máximo 14 personas.
                 </p>
                 <div class="text-center">
-                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                    <a href="#" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE EN CONTACTO CON NOSOTROS</a>
                 </div>
             </section>
         </section>
@@ -108,7 +108,7 @@
                 </p>
                 
                 <div class="text-center">
-                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                    <a href="#" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE EN CONTACTO CON NOSOTROS</a>
                 </div>
             </section>
         </section>
@@ -125,7 +125,7 @@
                     Tour privado. Previa reserva con al menos 24 horas de anticipación. Para grupos de mínimo 1 y máximo 6 personas. Sujeto a condiciones climáticas.
                 </p>
                 <div class="text-center">
-                    <a href="contacto" class="link">PÓNGASE EN CONTACTO CON NOSOTROS</a>
+                    <a href="#" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE EN CONTACTO CON NOSOTROS</a>
                 </div>
                 
             </section>
