--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -35,7 +35,7 @@
                     <div class="d-flex row m-0 w-100 ">
                         <a class="navbar-brand d-none d-lg-block col-md-4 m-0" href="#">
                             <img
-                            src="./src/img/webp/LOGO.jpg"
+                            src="/src/img/webp/LOGO.jpg"
                             width="100px"
                             alt="Piedra Luna Resort"
                             />
