--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -70,6 +70,7 @@
         </section>
         <section class="row elements">
             <img src="/src/img/webp/bg.phone_reservas.jpg" class="col-12 col-md-6 elements-img" alt="alimente-alpacas">
+            <img src="/src/img/icons/phone.svg" alt="phone icon" class="col-12 col-md-6 elements-icon">
             <section class="content col-12 col-md-6">
                 <h3>
                     Conoce nuestros números de contacto: 
@@ -88,7 +89,8 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.schedule.room.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img" alt="picnic-jardin">
+            <img src="/src/img/webp/bg.schedule.room.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img-r" alt="picnic-jardin">
+            <img src="/src/img/icons/schedule.svg" alt="calendar icon" class="col-12 col-md-6 elements-icon-r order-sm-1 order-md-2">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Reservas para eventos privados
