--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicias de la Luna</title>
     <link rel="stylesheet" href="/src/css/delicias.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
+        rel="stylesheet" />
+
 </head>
-<body>
+
+<body class="container-fluid m-0 p-0">
+
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white m-0">
-            <div class="container-fluid">
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
+        <nav class="navbar navbar-expand-md col-md-9 mx-auto navbar-light">
+            <div class="container">
+                <a class="navbar-brand order-2 order-md-1" href="#">
+                    <img src="/src/img/webp/LOGO.jpg" alt="Logo" width="100" height="50" />
+                </a>
+                <button class="navbar-toggler order-1 order-md-0" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand d-lg-none" href="#">
-                    <img
-                    src="./src/img/webp/LOGO.jpg"
-                    width="100px"
-                    alt="Piedra Luna Resort"
-                    />
-                </a>
-                <a class="btn btn-secondary btn-reservar d-lg-none" href="#">Reservar</a>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="d-flex row m-0 w-100 ">
-                        <a class="navbar-brand d-none d-lg-block col-md-4 m-0" href="#">
-                            <img
-                            src="/src/img/webp/LOGO.jpg"
-                            width="100px"
-                            alt="Piedra Luna Resort"
-                            />
-                        </a>
-                        <ul class="navbar-nav ml-lg-auto col-md-6 m-0 flex-row-reverse ">
-                            <li class="nav-item"><a class="nav-link" href="#">Actividades</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SPA</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Restaurantes</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Hotel</a></li>
-                        </ul>
-                        <a class="btn btn-secondary btn-reservar d-none d-lg-block col-md-2" href="#">Reservar</a>
-                    </div>
+                <div class="collapse navbar-collapse order-md-2 justify-content-end ms-3">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#">Hotel</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Restaurantes</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#">Spa</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Actividades</a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn btn-secondary order-3 ms-3" type="button">
+                    Reservar
+                </button>
+            </div>
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body d-md-none">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#">Hotel</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Restaurantes</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#">Spa</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Actividades</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <div class="banner">
         <img src="/src/img/webp/pexels-pixabay-260922.webp" alt="Delicias de la Luna">
@@ -60,9 +74,17 @@
     </div>
 
     <section class="content container p-5">
-        <p>La gastronomía de <strong>Delicias de la Luna</strong> está profundamente influenciada por la riqueza de nuestro entorno natural, ofreciendo una experiencia culinaria única que combina lo mejor de la tierra y el campo. En <strong>Piedra Luna Resort</strong>, la diversidad de sabores se mezcla con la innovación, creando un destino gastronómico incomparable en medio de la serenidad del lujo campestre.</p>
-        <p><strong>Delicias de la Luna</strong> es el lugar ideal para disfrutar de platos exquisitos elaborados con ingredientes locales de la más alta calidad. Nuestra oferta incluye <em>productos frescos de la región</em>, una variedad de productos de temporada y especialidades que resaltan lo mejor de nuestra tierra.</p>
-        <p>Ven y descubre una <em>sinfonía de sabores</em> en nuestros espacios gastronómicos, donde cada plato está cuidadosamente preparado para brindarte una <em>experiencia culinaria inigualable</em>, enriquecida con el <em>toque especial de la luna</em>.</p>
+        <p>La gastronomía de <strong>Delicias de la Luna</strong> está profundamente influenciada por la riqueza de
+            nuestro entorno natural, ofreciendo una experiencia culinaria única que combina lo mejor de la tierra y el
+            campo. En <strong>Piedra Luna Resort</strong>, la diversidad de sabores se mezcla con la innovación, creando
+            un destino gastronómico incomparable en medio de la serenidad del lujo campestre.</p>
+        <p><strong>Delicias de la Luna</strong> es el lugar ideal para disfrutar de platos exquisitos elaborados con
+            ingredientes locales de la más alta calidad. Nuestra oferta incluye <em>productos frescos de la región</em>,
+            una variedad de productos de temporada y especialidades que resaltan lo mejor de nuestra tierra.</p>
+        <p>Ven y descubre una <em>sinfonía de sabores</em> en nuestros espacios gastronómicos, donde cada plato está
+            cuidadosamente preparado para brindarte una <em>experiencia culinaria inigualable</em>, enriquecida con el
+            <em>toque especial de la luna</em>.
+        </p>
     </section>
 
     <div class="container content-section">
@@ -73,10 +95,12 @@
             <div class="col-md-6">
                 <h2>Killa Sacha, Restaurante Central</h2>
                 <p>
-                    La propuesta gastronómica única de Killa Sacha lo hace uno de los mejores restaurantes en Piedra Luna Resort.
+                    La propuesta gastronómica única de Killa Sacha lo hace uno de los mejores restaurantes en Piedra
+                    Luna Resort.
                 </p>
                 <p>
-                    Nuestro restaurante ofrece comida ligera con productos frescos locales de nuestro huerto y un ambiente cómodo y cálido.Esto hace que nuestros comensales se sientan como en casa.
+                    Nuestro restaurante ofrece comida ligera con productos frescos locales de nuestro huerto y un
+                    ambiente cómodo y cálido.Esto hace que nuestros comensales se sientan como en casa.
                 </p>
                 <p>
                     Abierto todos los días de 6:00 a. m. a 10:00 p. m.
@@ -91,12 +115,16 @@
     <div class="container content-section">
         <div class="row align-items-center">
             <div class="col-md-6 order-md-2">
-                <img src="/src/img/webp/pexels-igor-starkov-233202-1055054.webp" alt="Killa Sacha Restaurante" class="img-fluid">
+                <img src="/src/img/webp/pexels-igor-starkov-233202-1055054.webp" alt="Killa Sacha Restaurante"
+                    class="img-fluid">
             </div>
             <div class="col-md-6 order-md-1">
                 <h2>Killa K'aytu, Restaurante de Comida Saludable</h2>
                 <p>
-                    Killa K'aytu es la nueva propuesta gastronómica ligera y saludable en Delicias de la Luna, disponible a cualquier hora del día: desde un menú completo hasta un tentempié rápido, un reconfortante desayuno preparado al momento o uno de los mejores cafés que puedes degustar en colaboración con Arte Café Perú.
+                    Killa K'aytu es la nueva propuesta gastronómica ligera y saludable en Delicias de la Luna,
+                    disponible a cualquier hora del día: desde un menú completo hasta un tentempié rápido, un
+                    reconfortante desayuno preparado al momento o uno de los mejores cafés que puedes degustar en
+                    colaboración con Arte Café Perú.
                 </p>
                 <div class="text-center">
                     <button type="button" class="btn btn-outline-success">Ver Más</button>
@@ -113,15 +141,18 @@
             <div class="col-md-6">
                 <h2>Piedra Luna Bar</h2>
                 <p>
-                    Enclavado en el corazón de Piedra Luna Resort, se encuentra el encantador Piedra Luna Bar. Este espacio combina a la perfección la elegancia con un toque rústico, ofreciendo un refugio acogedor para huéspedes y visitantes locales.
+                    Enclavado en el corazón de Piedra Luna Resort, se encuentra el encantador Piedra Luna Bar. Este
+                    espacio combina a la perfección la elegancia con un toque rústico, ofreciendo un refugio acogedor
+                    para huéspedes y visitantes locales.
                 </p>
                 <p>
-                    Ya sea que busques un lugar para una conversación amena, una reunión casual o simplemente un momento de relax, nuestro bar te proporciona el ambiente perfecto.
+                    Ya sea que busques un lugar para una conversación amena, una reunión casual o simplemente un momento
+                    de relax, nuestro bar te proporciona el ambiente perfecto.
                 </p>
                 <div class="text-center">
                     <button type="button" class="btn btn-outline-success">Ver Más</button>
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -134,7 +165,8 @@
                 <h3>PACHAMANCA</h3>
                 <p><strong>Todos los dos primeros domingos de cada mes</strong></p>
                 <p>
-                    Disfrute una experiencia culinaria tradicional de los andes peruanos que consta de la cocción de carnes sobre piedras calientes bajo la tierra. Siéntase al lado de magníficas vistas.
+                    Disfrute una experiencia culinaria tradicional de los andes peruanos que consta de la cocción de
+                    carnes sobre piedras calientes bajo la tierra. Siéntase al lado de magníficas vistas.
                 </p>
                 <p><strong>Reservas:</strong> +51 999 659 777</p>
             </div>
@@ -143,16 +175,70 @@
                 <h3>PARRILLA EN EL JARDIN</h3>
                 <p><strong>Todos los tercer y cuarto domingos de cada mes</strong></p>
                 <p>
-                    Disfrute una deliciosa parrilla en nuestro jardín, rodéese de la naturaleza infinita, disfrute de esta experiencia gastronómica elaborada con productos locales.
+                    Disfrute una deliciosa parrilla en nuestro jardín, rodéese de la naturaleza infinita, disfrute de
+                    esta experiencia gastronómica elaborada con productos locales.
                 </p>
                 <p><strong>Reservas:</strong> +51 999 659 777</p>
             </div>
         </div>
     </div>
-
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10">
+                <hr />
+                <footer class="pt-4 my-md-5 pt-md-5">
+                    <div class="footer-container">
+                        <div class="row text-center text-md-start">
+                            <div class="col-12 col-md-6 mb-3 mb-md-0">
+                                <h5>PIEDRA LUNA RESORT</h5>
+                                <p class="fw-bold mb-1">LLÁMANOS AL</p>
+                                <p class="mb-3">(01) 348-0687</p>
+                                <p class="fw-bold mb-1">Calle Enrique Palacios 1072</p>
+                                <p>Miraflores. Lima, Peru</p>
+                                <div class="footer-icons d-flex justify-content-center justify-content-md-start">
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3"
+                                        style="width: 40px; height: 40px"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3"
+                                        style="width: 40px; height: 40px"><i class="fab fa-x-twitter"></i></a>
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3"
+                                        style="width: 40px; height: 40px"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3"
+                                        style="width: 40px; height: 40px"><i class="fab fa-spotify"></i></a>
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark me-3"
+                                        style="width: 40px; height: 40px"><i class="fab fa-tiktok"></i></a>
+                                    <a href="#"
+                                        class="d-flex align-items-center justify-content-center rounded-circle border border-dark"
+                                        style="width: 40px; height: 40px"><i class="fab fa-whatsapp"></i></a>
+                                </div>
+                            </div>
+                            <div class="footer-newsletter col-12 col-md-6">
+                                <h5>SUSCRÍBASE A LAS NEWSLETTER</h5>
+                                <div class="input-group">
+                                    <input type="email" class="form-control" placeholder="introduce tu e-mail" />
+                                    <button class="btn btn-outline-secondary" type="button">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+                <hr />
+                <div class="footer-copy text-center">
+                    <p>&copy; PIEDRA LUNA RESORT 2024</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
