updated delicias page with new images

--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -67,7 +67,7 @@
         </nav>
     </header>
     <div class="banner">
-        <img src="/src/img/webp/pexels-pixabay-260922.webp" alt="Delicias de la Luna">
+        <img src="/src/img/webp/Delicias/banner.jpg" alt="Delicias de la Luna">
         <div class="banner-text">
             <h1>Delicias de la Luna</h1>
         </div>
@@ -90,7 +90,7 @@
     <div class="container content-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="/src/img/webp/150118.webp" alt="Killa Sacha Restaurante" class="img-fluid">
+                <img src="/src/img/webp/Delicias/comida.jpg" alt="Killa Sacha Restaurante" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <h2>Killa Sacha, Restaurante Central</h2>
@@ -115,7 +115,7 @@
     <div class="container content-section">
         <div class="row align-items-center">
             <div class="col-md-6 order-md-2">
-                <img src="/src/img/webp/pexels-igor-starkov-233202-1055054.webp" alt="Killa Sacha Restaurante"
+                <img src="/src/img/webp/Delicias/salon.jpg" alt="Killa Sacha Restaurante"
                     class="img-fluid">
             </div>
             <div class="col-md-6 order-md-1">
@@ -136,7 +136,7 @@
     <div class="container content-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="/src/img/webp/pexels-energepic-com-27411-110472.webp" alt="Piedra Luna Bar" class="img-fluid">
+                <img src="/src/img/webp/Delicias/bar.jpg" alt="Piedra Luna Bar" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <h2>Piedra Luna Bar</h2>
@@ -161,7 +161,7 @@
         <h2>EXPERIENCIAS GASTRONÓMICOS</h2>
         <div class="row">
             <div class="col-md-6 text-center">
-                <img src="/src/img/webp/135832.webp" alt="Pachamanca" class="img-fluid">
+                <img src="/src/img/webp/Delicias/pachamanca.jpg" alt="Pachamanca" class="img-fluid">
                 <h3>PACHAMANCA</h3>
                 <p><strong>Todos los dos primeros domingos de cada mes</strong></p>
                 <p>
@@ -171,7 +171,7 @@
                 <p><strong>Reservas:</strong> +51 999 659 777</p>
             </div>
             <div class="col-md-6 text-center">
-                <img src="/src/img/webp/135850.webp" alt="Parrilla en el Jardin" class="img-fluid">
+                <img src="/src/img/webp/Delicias/parrilla_jardin.jpg" alt="Parrilla en el Jardin" class="img-fluid">
                 <h3>PARRILLA EN EL JARDIN</h3>
                 <p><strong>Todos los tercer y cuarto domingos de cada mes</strong></p>
                 <p>
