--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -68,7 +68,7 @@
     </header>
     <main class="container-fluid p-0">
         <section class="banner">
-            <img src="/src/img/webp/rsg-lei-activity-horseback-riding01.webp" class="banner-img" alt="banner">
+            <img src="/src/img/webp/Actividades/banner.jpg" class="banner-img" alt="banner">
             <h1 class="banner-text">Actividades</h1>
         </section>
 
@@ -83,7 +83,7 @@
             </p>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/201926.webp" class="col-12 col-md-6 elements-img" alt="alimente-alpacas">
+            <img src="/src/img/webp/Actividades/alpacas.jpg" class="col-12 col-md-6 elements-img" alt="alimente-alpacas">
             <section class="content col-12 col-md-6">
                 <h3 class="">
                     Alimente a las alpacas
@@ -101,7 +101,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/rsg-din-picnic01.webp" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
+            <img src="/src/img/webp/Actividades/picnic.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
                 alt="picnic-jardin">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
@@ -120,7 +120,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/201246.webp" class="col-12 col-md-6 elements-img" alt="pachamama">
+            <img src="/src/img/webp/Actividades/pachamama.jpg" class="col-12 col-md-6 elements-img" alt="pachamama">
             <section class="content col-12 col-md-6">
                 <h3>
                     Pachamama
@@ -141,7 +141,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/201651.webp" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
+            <img src="/src/img/webp/Actividades/cabalgata.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
                 alt="cabalgata">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
