updated reservas page with new images

--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -69,7 +69,7 @@
     </header>
     <main class="container-fluid p-0">
         <section class="banner">
-            <img src="/src/img/webp/reservar.banner.jpg" class="banner-img" alt="banner">
+            <img src="/src/img/webp/Reservas/banner.jpg" class="banner-img" alt="banner">
             <h1 class="banner-text">reservar</h1>
         </section>
 
@@ -85,8 +85,8 @@
             </p>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.phone_reservas.jpg" class="col-12 col-md-6 elements-img" alt="alimente-alpacas">
-            <img src="/src/img/icons/phone.svg" alt="phone icon" class="col-12 col-md-6 elements-icon">
+            <img src="/src/img/webp/Reservas/contacto.jpg" class="col-12 col-md-6 elements-img" alt="contacto">
+            <!--<img src="/src/img/icons/phone.svg" alt="phone icon" class="col-12 col-md-6 elements-icon">-->
             <section class="content col-12 col-md-6">
                 <h3>
                     Conoce nuestros números de contacto:
@@ -105,8 +105,8 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.schedule.room.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img-r"
-                alt="picnic-jardin">
+            <img src="/src/img/webp/Reservas/evento.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img-r"
+                alt="evento">
             <!--<img src="/src/img/icons/schedule.svg" alt="calendar icon" class="col-12 col-md-6 elements-icon-r order-sm-1 order-md-2">-->
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
@@ -125,7 +125,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.map.reservas.jpg" class="col-12 col-md-6 elements-img" alt="pachamama">
+            <img src="/src/img/webp/Reservas/ubicacion.jpg" class="col-12 col-md-6 elements-img" alt="ubicacion">
             <section class="content col-12 col-md-6">
                 <h3>
                     Nuestras oficinas se encuentran en:
@@ -140,8 +140,8 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/bg.socialNetworks.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
-                alt="cabalgata">
+            <img src="/src/img/webp/Reservas/redes.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
+                alt="redes">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Síguenos en nuestras redes sociales:
