--- a/index.html
+++ b/index.html
@@ -1,18 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedra Luna Resort </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./src/css/index.css">
+    <title>Piedra Luna Resort</title>
+    <link rel="icon" href="./src/img/icons/favicon.ico" type="image/x-icon">
 
-</head>
-<body>
-    <header>
-        <nav></nav>
-    </header>
-    <main></main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md fixed-top col-md-9 mx-auto bg-white navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand order-2 order-md-1" href="./index.html">
+          <img
+            src="./src/img/webp/Home/LOGO.jpg"
+            alt="Logo"
+            width="100"
+            height="50"
+          />
+        </a>
+        <button
+          class="navbar-toggler order-1 order-md-0"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse order-md-2 justify-content-end ms-3"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="./src/pages/hotel.html">Hotel</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/delicias.html">Restaurantes</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="./src/pages/spa.html">Spa</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/actividades.html">Actividades</a>
+            </li>
+          </ul>
+        </div>
+        <button class="btn btn-secondary order-3 ms-3" type="button" onclick="window.location.href='./src/pages/reservas.html';">
+          Reservar
+        </button>
+      </div>
+      <div
+        class="offcanvas offcanvas-start"
+        tabindex="-1"
+        id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body d-md-none">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="./src/pages/hotel.html">Hotel</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/delicias.html">Restaurantes</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="./src/pages/spa.html">Spa</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/pages/actividades.html">Actividades</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- end Navbar -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
