mejoras en la pagina actividades

--- a/src/pages/actividades.html
+++ b/src/pages/actividades.html
@@ -11,6 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://db.onlinewebfonts.com/c/037a670cefc97958beb036dab0f6e254?family=Bodoni+MT" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cabin:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap"
         rel="stylesheet" />
@@ -73,41 +74,45 @@
         </section>
 
         <section class="row justify-content-md-center my-5">
-            <h2 class="col-12 title col-md-8 col-lg-8 text-center">
+            <h2 class="col-12 col-md-8 col-lg-8 text-center">
                 Descubra los secretos del Valle Sagrado
             </h2>
-            <p class="col-12 description col-md-6 col-lg-6 text-center">
+            <p class="col-12 description col-md-8 col-lg-8 text-center">
                 ¿Se pregunta qué hacer en Perú? Déjese encantar por auténticos rituales andinos, maravíllese con
                 recorridos por el Valle Sagrado o déjese llevar por la magia del río Urubamba. Una estadía en el Río
                 Sagrado ofrece infinidad de oportunidades para explorar.
             </p>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Actividades/alpacas.jpg" class="col-12 col-md-6 elements-img" alt="alimente-alpacas">
-            <section class="content col-12 col-md-6">
-                <h3 class="">
-                    Alimente a las alpacas
-                </h3>
-                <p>
-                    Lleve a sus hijos a acariciar nuestras adorables alpacas bebé y ayude a darles el biberón. Esta es
-                    una gran oportunidad para acercarse a una de las criaturas más icónicas y adorables de la región.
-                    Todos los días a las 8 am y a las 4 pm. Sujeto a condiciones climáticas.
-                </p>
-                <div class="text-center">
-                    <a href="#"
-                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">PÓNGASE
-                        EN CONTACTO CON NOSOTROS</a>
+            <img src="/src/img/webp/Actividades/alpacas.jpg" class="col-12 col-md-6 elements-img m-0 p-0" alt="alimente-alpacas">
+            <section class="contenido col-12 col-md-6 ">
+                <div class="justify-content-center col-md-9 p-5">
+                    <h3>
+                        Alimente a las alpacas
+                    </h3>
+                    <p class="info">
+                        Lleve a sus hijos a acariciar nuestras adorables alpacas bebé y ayude a darles el biberón. Esta es
+                        una gran oportunidad para acercarse a una de las criaturas más icónicas y adorables de la región.
+                    </p>
+                    <p class="info">
+                        Todos los días a las 8 am y a las 4 pm. Sujeto a condiciones climáticas.
+                    </p>
+                    <div class="text-center col-12">
+                        <a href="#"
+                            class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover text-center col-12">PÓNGASE
+                            EN CONTACTO CON NOSOTROS</a>
+                    </div>
                 </div>
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Actividades/picnic.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
+            <img src="/src/img/webp/Actividades/picnic.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img m-0 p-0"
                 alt="picnic-jardin">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Picnic en el jardín
                 </h3>
-                <p>
+                <p class="info">
                     Disfrute de un almuerzo especial junto al Río Urubamba. Comience con unos sabrosos bocadillos, luego
                     continúe con una variedad de platos con ingredientes locales, incluyendo de nuestro propio huerto.
                     Previa reserva con 24 horas de anticipación. Para grupos de mínimo 2 y máximo 14 personas.
@@ -120,12 +125,12 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Actividades/pachamama.jpg" class="col-12 col-md-6 elements-img" alt="pachamama">
+            <img src="/src/img/webp/Actividades/pachamama.jpg" class="col-12 col-md-6 elements-img m-0 p-0" alt="pachamama">
             <section class="content col-12 col-md-6">
                 <h3>
                     Pachamama
                 </h3>
-                <p>
+                <p class="info">
                     Únase a nosotros para una ceremonia de ofrenda sagrada, que le acercará a la naturaleza y
                     rejuvenecerá su espíritu. <br>
                     Un chamán andino será tu guía mientras das gracias a la Madre Tierra por la vida que te da. <br>
@@ -141,17 +146,17 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Actividades/cabalgata.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
+            <img src="/src/img/webp/Actividades/cabalgata.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img m-0 p-0"
                 alt="cabalgata">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Cabalgata por el Valle Sagrado
                 </h3>
-                <p>
+                <p class="info">
                     Monte en una pintoresca cabalgata a través de bosques nativos, pastos y arroyos, visitando las
                     comunidades locales a lo largo del camino y, al final del viaje, una magnífica cascada.
                 </p>
-                <p>
+                <p class="info">
                     Tour privado. Previa reserva con al menos 24 horas de anticipación. Para grupos de mínimo 1 y máximo
                     6 personas. Sujeto a condiciones climáticas.
                 </p>
