--- a/src/pages/reservas.html
+++ b/src/pages/reservas.html
@@ -84,10 +84,11 @@
                 Contáctanos y descubre el Perú profundo en un increible lugar de descanso.
             </p>
         </section>
+
         <section class="row elements">
-            <img src="/src/img/webp/Reservas/contacto.jpg" class="col-12 col-md-6 elements-img" alt="contacto">
+            <img src="/src/img/webp/Reservas/contacto.jpg" class="col-12 col-md-6 elements-img m-0 p-0" alt="contacto">
             <!--<img src="/src/img/icons/phone.svg" alt="phone icon" class="col-12 col-md-6 elements-icon">-->
-            <section class="content col-12 col-md-6">
+            <section class="content col-12 col-md-6 m-0">
                 <h3>
                     Conoce nuestros números de contacto:
                 </h3>
@@ -104,8 +105,9 @@
                 </div>
             </section>
         </section>
+
         <section class="row elements">
-            <img src="/src/img/webp/Reservas/evento.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img-r"
+            <img src="/src/img/webp/Reservas/evento.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img-r m-0 p-0"
                 alt="evento">
             <!--<img src="/src/img/icons/schedule.svg" alt="calendar icon" class="col-12 col-md-6 elements-icon-r order-sm-1 order-md-2">-->
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
@@ -125,7 +127,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Reservas/ubicacion.jpg" class="col-12 col-md-6 elements-img" alt="ubicacion">
+            <img src="/src/img/webp/Reservas/ubicacion.jpg" class="col-12 col-md-6 elements-img m-0 p-0" alt="ubicacion">
             <section class="content col-12 col-md-6">
                 <h3>
                     Nuestras oficinas se encuentran en:
@@ -140,8 +142,7 @@
             </section>
         </section>
         <section class="row elements">
-            <img src="/src/img/webp/Reservas/redes.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img"
-                alt="redes">
+            <img src="/src/img/webp/Reservas/redes.jpg" class="col-12 col-md-6 order-sm-1 order-md-2 elements-img m-0 p-0" alt="redes">
             <section class="content-r col-12 col-md-6 order-sm-2 order-md-1">
                 <h3>
                     Síguenos en nuestras redes sociales:
