--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -90,7 +90,7 @@
     <div class="container content-section">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="/src/img/webp/Delicias/comida.jpg" alt="Killa Sacha Restaurante" class="img-fluid">
+                <img src="/src/img/webp/Delicias/comida.jpg" alt="Killa Sacha Restaurante" class="col-12 col-md-6 elements-img m-0 p-0">
             </div>
             <div class="col-md-6">
                 <h2>Killa Sacha, Restaurante Central</h2>
