Se optimizó la page delicias, se añadieron enlaces, se optimizo css delicias

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <link rel="stylesheet" href="./src/css/index.css" />
     <title>Piedra Luna Resort</title>
-    <link rel="icon" href="./src/img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/src/img/icons/favicon.ico" type="image/x-icon" />
   </head>
+
   <body>
     <!-- Navbar -->
     <nav
