--- a/src/pages/delicias.html
+++ b/src/pages/delicias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delicias de la Luna</title>
+    <link rel="icon" href="/src/img/icons/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/css/delicias.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
